[gd_scene load_steps=8 format=3 uid="uid://datgwgg5fwg7l"]

[ext_resource type="Theme" uid="uid://c4dqfbr034o6g" path="res://ui, gui and hud/theme.tres" id="1_m3mnp"]
[ext_resource type="Script" path="res://ui, gui and hud/recipe.gd" id="1_t3pf1"]
[ext_resource type="FontFile" uid="uid://dxhj70dmp2mf7" path="res://fonts and styles/GameIcons.ttf" id="3_bnh0f"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vmoah"]
color = Color(0.705882, 0.772549, 0.894118, 1)
thickness = 4
vertical = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_osgor"]

[sub_resource type="LabelSettings" id="LabelSettings_psjha"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_o1j83"]

[node name="Control" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(0, 193)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_m3mnp")
script = ExtResource("1_t3pf1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.247059, 0.32549, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultTexture" type="TextureRect" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_vmoah")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CraftButton" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
theme_override_colors/font_color = Color(0.0823529, 0.498039, 0.121569, 1)
theme_override_colors/font_pressed_color = Color(0.0823529, 0.498039, 0.121569, 1)
theme_override_colors/font_hover_color = Color(0.0941176, 0.639216, 0.14902, 1)
theme_override_colors/font_focus_color = Color(0.0941176, 0.639216, 0.14902, 1)
theme_override_fonts/font = ExtResource("3_bnh0f")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_osgor")
text = "I"

[node name="ResultLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 2
text = "Text
"
label_settings = SubResource("LabelSettings_psjha")
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IngredientLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_o1j83")

[node name="IngredientTexture" type="TextureRect" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IngredientLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_o1j83")

[node name="IngredientTexture" type="TextureRect" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IngredientLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
label_settings = SubResource("LabelSettings_o1j83")

[node name="IngredientTexture" type="TextureRect" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="IngredientLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_o1j83")

[node name="IngredientTexture" type="TextureRect" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="IngredientLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_o1j83")

[node name="IngredientTexture" type="TextureRect" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="IngredientLabel" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
label_settings = SubResource("LabelSettings_o1j83")

[node name="IngredientTexture" type="TextureRect" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer2/CraftButton" to="." method="_on_craft_button_pressed"]
